[gd_scene load_steps=5 format=4 uid="uid://jwbatjrd1wl2"]

[ext_resource type="Texture2D" uid="uid://7b5e3bxgdnba" path="res://assets/textures/Tiles.png" id="1_1j1cm"]
[ext_resource type="Script" path="res://nodes/GameField.gd" id="2_324br"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ystq5"]
texture = ExtResource("1_1j1cm")
texture_region_size = Vector2i(1, 1)
0:0/0 = 0
0:1/0 = 0
1:1/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_bdnrh"]
tile_size = Vector2i(1, 1)
sources/0 = SubResource("TileSetAtlasSource_ystq5")

[node name="GameField" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -361.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_324br")

[node name="Field" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Map" type="TileMapLayer" parent="Field"]
scale = Vector2(7.91, 7.91)
tile_map_data = PackedByteArray("AAD/////AAABAAAAAAD//yAAAAABAAAAAAAAAP//AAABAAAAAAABAP//AAABAAAAAAACAP//AAABAAAAAAADAP//AAABAAAAAAAEAP//AAABAAAAAAAFAP//AAABAAAAAAAGAP//AAABAAAAAAAHAP//AAABAAAAAAAIAP//AAABAAAAAAAJAP//AAABAAAAAAAKAP//AAABAAAAAAALAP//AAABAAAAAAAMAP//AAABAAAAAAANAP//AAABAAAAAAAOAP//AAABAAAAAAAPAP//AAABAAAAAAAQAP//AAABAAAAAAARAP//AAABAAAAAAASAP//AAABAAAAAAATAP//AAABAAAAAAAUAP//AAABAAAAAAAVAP//AAABAAAAAAAWAP//AAABAAAAAAAXAP//AAABAAAAAAAYAP//AAABAAAAAAAZAP//AAABAAAAAAAaAP//AAABAAAAAAAbAP//AAABAAAAAAAcAP//AAABAAAAAAAdAP//AAABAAAAAAAeAP//AAABAAAAAAAfAP//AAABAAAAAAAgAP//AAABAAAAAAAhAP//AAABAAAAAAAiAP//AAABAAAAAAAjAP//AAABAAAAAAAkAP//AAABAAAAAAAlAP//AAABAAAAAAAmAP//AAABAAAAAAAnAP//AAABAAAAAAAoAP//AAABAAAAAAApAP//AAABAAAAAAAqAP//AAABAAAAAAArAP//AAABAAAAAAAsAP//AAABAAAAAAAtAP//AAABAAAAAAAuAP//AAABAAAAAAAvAP//AAABAAAAAAAwAP//AAABAAAAAAAxAP//AAABAAAAAAAyAP//AAABAAAAAAD//wAAAAABAAAAAAD//wEAAAABAAAAAAD//wIAAAABAAAAAAD//wMAAAABAAAAAAD//wQAAAABAAAAAAD//wUAAAABAAAAAAD//wYAAAABAAAAAAD//wcAAAABAAAAAAD//wgAAAABAAAAAAD//wkAAAABAAAAAAD//woAAAABAAAAAAD//wsAAAABAAAAAAD//wwAAAABAAAAAAD//w0AAAABAAAAAAD//w4AAAABAAAAAAD//w8AAAABAAAAAAD//xAAAAABAAAAAAD//xEAAAABAAAAAAD//xIAAAABAAAAAAD//xMAAAABAAAAAAD//xQAAAABAAAAAAD//xUAAAABAAAAAAD//xYAAAABAAAAAAD//xcAAAABAAAAAAD//xgAAAABAAAAAAD//xkAAAABAAAAAAD//xoAAAABAAAAAAD//xsAAAABAAAAAAD//xwAAAABAAAAAAD//x0AAAABAAAAAAD//x4AAAABAAAAAAD//x8AAAABAAAAAAAdABQAAAABAAEAAAD//zIAAAABAAAAAAAAADIAAAABAAAAAAABADIAAAABAAAAAAACADIAAAABAAAAAAADADIAAAABAAAAAAAEADIAAAABAAAAAAAFADIAAAABAAAAAAAGADIAAAABAAAAAAAHADIAAAABAAAAAAAIADIAAAABAAAAAAAJADIAAAABAAAAAAAKADIAAAABAAAAAAALADIAAAABAAAAAAAMADIAAAABAAAAAAANADIAAAABAAAAAAAOADIAAAABAAAAAAAPADIAAAABAAAAAAAQADIAAAABAAAAAAARADIAAAABAAAAAAASADIAAAABAAAAAAATADIAAAABAAAAAAAUADIAAAABAAAAAAAVADIAAAABAAAAAAAWADIAAAABAAAAAAAXADIAAAABAAAAAAAYADIAAAABAAAAAAAZADIAAAABAAAAAAAaADIAAAABAAAAAAAbADIAAAABAAAAAAAcADIAAAABAAAAAAAdADIAAAABAAAAAAAeADIAAAABAAAAAAAfADIAAAABAAAAAAAgADIAAAABAAAAAAAhADIAAAABAAAAAAAiADIAAAABAAAAAAAjADIAAAABAAAAAAAkADIAAAABAAAAAAAlADIAAAABAAAAAAAmADIAAAABAAAAAAAnADIAAAABAAAAAAAoADIAAAABAAAAAAApADIAAAABAAAAAAAqADIAAAABAAAAAAArADIAAAABAAAAAAAsADIAAAABAAAAAAAtADIAAAABAAAAAAAuADIAAAABAAAAAAAvADIAAAABAAAAAAAwADIAAAABAAAAAAAxADIAAAABAAAAAAAyADIAAAABAAAAAAAzAP//AAABAAAAAAAzADIAAAABAAAAAAA0AP//AAABAAAAAAA0ADIAAAABAAAAAAA1AP//AAABAAAAAAA1ADIAAAABAAAAAAA2AP//AAABAAAAAAA2ADIAAAABAAAAAAA3AP//AAABAAAAAAA3ADIAAAABAAAAAAA4AP//AAABAAAAAAA4ADIAAAABAAAAAAA5AP//AAABAAAAAAA5ADIAAAABAAAAAAA6AP//AAABAAAAAAA6ADIAAAABAAAAAAA7AP//AAABAAAAAAA7ADIAAAABAAAAAAA8AP//AAABAAAAAAA8ADIAAAABAAAAAAA9AP//AAABAAAAAAA9ADIAAAABAAAAAAA+AP//AAABAAAAAAA+ADIAAAABAAAAAAA/AP//AAABAAAAAAA/ADIAAAABAAAAAABAAP//AAABAAAAAABAADIAAAABAAAAAABBAP//AAABAAAAAABBADIAAAABAAAAAABCAP//AAABAAAAAABCADIAAAABAAAAAABDAP//AAABAAAAAABDADIAAAABAAAAAABEAP//AAABAAAAAABEADIAAAABAAAAAABFAP//AAABAAAAAABFADIAAAABAAAAAABGAP//AAABAAAAAABGADIAAAABAAAAAABHAP//AAABAAAAAABHADIAAAABAAAAAABIAP//AAABAAAAAABIADIAAAABAAAAAABJAP//AAABAAAAAABJADIAAAABAAAAAABKAP//AAABAAAAAABKADIAAAABAAAAAABLAP//AAABAAAAAABLADIAAAABAAAAAABMAP//AAABAAAAAABMADIAAAABAAAAAABNAP//AAABAAAAAABNADIAAAABAAAAAABOAP//AAABAAAAAABOADIAAAABAAAAAABPAP//AAABAAAAAABPADIAAAABAAAAAABQAP//AAABAAAAAABQADIAAAABAAAAAABRAP//AAABAAAAAABRADIAAAABAAAAAABSAP//AAABAAAAAABSADIAAAABAAAAAABTAP//AAABAAAAAABTADIAAAABAAAAAABUAP//AAABAAAAAABUADIAAAABAAAAAABVAP//AAABAAAAAABVADIAAAABAAAAAABWAP//AAABAAAAAABWADIAAAABAAAAAABXAP//AAABAAAAAABXADIAAAABAAAAAABYAP//AAABAAAAAABYADIAAAABAAAAAABZAP//AAABAAAAAABZADIAAAABAAAAAABaAP//AAABAAAAAABaADIAAAABAAAAAABbAP//AAABAAAAAABbADIAAAABAAAAAABcAP//AAABAAAAAABcADIAAAABAAAAAABdAP//AAABAAAAAABdADIAAAABAAAAAABeAP//AAABAAAAAABeADIAAAABAAAAAABfAP//AAABAAAAAABfADIAAAABAAAAAABgAP//AAABAAAAAABgADIAAAABAAAAAABhAP//AAABAAAAAABhADIAAAABAAAAAABiAP//AAABAAAAAABiADIAAAABAAAAAABjAP//AAABAAAAAABjADIAAAABAAAAAABkAP//AAABAAAAAABkADIAAAABAAAAAABkAAAAAAABAAAAAABkAAEAAAABAAAAAABkAAIAAAABAAAAAABkAAMAAAABAAAAAABkAAQAAAABAAAAAABkAAUAAAABAAAAAABkAAYAAAABAAAAAABkAAcAAAABAAAAAABkAAgAAAABAAAAAABkAAkAAAABAAAAAABkAAoAAAABAAAAAABkAAsAAAABAAAAAABkAAwAAAABAAAAAABkAA0AAAABAAAAAABkAA4AAAABAAAAAABkAA8AAAABAAAAAABkABAAAAABAAAAAABkABEAAAABAAAAAABkABIAAAABAAAAAABkABMAAAABAAAAAABkABQAAAABAAAAAABkABUAAAABAAAAAABkABYAAAABAAAAAABkABcAAAABAAAAAABkABgAAAABAAAAAABkABkAAAABAAAAAABkABoAAAABAAAAAABkABsAAAABAAAAAABkABwAAAABAAAAAABkAB0AAAABAAAAAABkAB4AAAABAAAAAABkAB8AAAABAAAAAABkACAAAAABAAAAAAD//yEAAAABAAAAAABkACEAAAABAAAAAAD//yIAAAABAAAAAABkACIAAAABAAAAAAD//yMAAAABAAAAAABkACMAAAABAAAAAAD//yQAAAABAAAAAABkACQAAAABAAAAAAD//yUAAAABAAAAAABkACUAAAABAAAAAAD//yYAAAABAAAAAABkACYAAAABAAAAAAD//ycAAAABAAAAAABkACcAAAABAAAAAAD//ygAAAABAAAAAABkACgAAAABAAAAAAD//ykAAAABAAAAAABkACkAAAABAAAAAAD//yoAAAABAAAAAABkACoAAAABAAAAAAD//ysAAAABAAAAAABkACsAAAABAAAAAAD//ywAAAABAAAAAABkACwAAAABAAAAAAD//y0AAAABAAAAAABkAC0AAAABAAAAAAD//y4AAAABAAAAAABkAC4AAAABAAAAAAD//y8AAAABAAAAAABkAC8AAAABAAAAAAD//zAAAAABAAAAAABkADAAAAABAAAAAAD//zEAAAABAAAAAABkADEAAAABAAAAAAADAAMAAAABAAEAAAAEAAkAAAABAAEAAAAJACYAAAABAAEAAAAOABcAAAABAAEAAAASABYAAAABAAEAAAAWACgAAAABAAEAAAAiABAAAAABAAEAAAAjAAAAAAABAAEAAAAsABUAAAABAAEAAAAxADAAAAABAAEAAAAzACgAAAABAAEAAAA1ACwAAAABAAEAAAA5AB4AAAABAAEAAAA5ADEAAAABAAEAAAA+ABkAAAABAAEAAAA/ACYAAAABAAEAAABGABoAAAABAAEAAABKAAYAAAABAAEAAABKABkAAAABAAEAAABPAC0AAAABAAEAAABQAAAAAAABAAEAAABQAAcAAAABAAEAAABWABcAAAABAAEAAABXACwAAAABAAEAAABYABYAAAABAAEAAABZACsAAAABAAEAAABbAC8AAAABAAEAAABcACgAAAABAAEAAABhACgAAAABAAEAAABjABcAAAABAAEAAABjACcAAAABAAEAAAAAAAsAAAABAAEAAAAAACMAAAABAAEAAAAAACQAAAABAAEAAAACABQAAAABAAEAAAAEAAwAAAABAAEAAAAFAA0AAAABAAEAAAAHAAYAAAABAAEAAAAHABIAAAABAAEAAAAJADAAAAABAAEAAAAMABIAAAABAAEAAAAMAC4AAAABAAEAAAAPAAEAAAABAAEAAAAQAAgAAAABAAEAAAARACIAAAABAAEAAAAUACkAAAABAAEAAAAVACcAAAABAAEAAAAWAAYAAAABAAEAAAAWAAoAAAABAAEAAAAXACQAAAABAAEAAAAaACMAAAABAAEAAAAdABgAAAABAAEAAAAgAAUAAAABAAEAAAAgAAoAAAABAAEAAAAgAC8AAAABAAEAAAAhABAAAAABAAEAAAAhABYAAAABAAEAAAAkAAgAAAABAAEAAAAkABkAAAABAAEAAAAlAAMAAAABAAEAAAAmAC8AAAABAAEAAAAoACoAAAABAAEAAAApACQAAAABAAEAAAAqACAAAAABAAEAAAArACEAAAABAAEAAAAuAAAAAAABAAEAAAAuAAMAAAABAAEAAAAuABwAAAABAAEAAAAvAAkAAAABAAEAAAAvABYAAAABAAEAAAAvACUAAAABAAEAAAAwAAkAAAABAAEAAAAwABgAAAABAAEAAAAxAAsAAAABAAEAAAAxACUAAAABAAEAAAA0AAoAAAABAAEAAAA0AC4AAAABAAEAAAA1AAwAAAABAAEAAAA1AB8AAAABAAEAAAA2ABAAAAABAAEAAAA2ACsAAAABAAEAAAA4AAMAAAABAAEAAAA7AAoAAAABAAEAAAA7ABcAAAABAAEAAAA8AA4AAAABAAEAAAA8ABUAAAABAAEAAAA8ACUAAAABAAEAAAA9ABcAAAABAAEAAAA9ACsAAAABAAEAAAA+AB0AAAABAAEAAABAAAAAAAABAAEAAABAACwAAAABAAEAAABBABYAAAABAAEAAABCABQAAAABAAEAAABDAAIAAAABAAEAAABDAAYAAAABAAEAAABDAA4AAAABAAEAAABDAA8AAAABAAEAAABFADEAAAABAAEAAABGACUAAAABAAEAAABHABIAAAABAAEAAABHABkAAAABAAEAAABHABsAAAABAAEAAABHAB0AAAABAAEAAABHACAAAAABAAEAAABIAAYAAAABAAEAAABIAB0AAAABAAEAAABIACkAAAABAAEAAABJACUAAAABAAEAAABKAC0AAAABAAEAAABLAAEAAAABAAEAAABNAAYAAAABAAEAAABOAB4AAAABAAEAAABOADEAAAABAAEAAABQABsAAAABAAEAAABTAAkAAAABAAEAAABTABoAAAABAAEAAABUABkAAAABAAEAAABUACIAAAABAAEAAABUACoAAAABAAEAAABVAAsAAAABAAEAAABXAAcAAAABAAEAAABXAAoAAAABAAEAAABXAB0AAAABAAEAAABZABYAAAABAAEAAABaACYAAAABAAEAAABbACoAAAABAAEAAABcACwAAAABAAEAAABdABUAAAABAAEAAABdACoAAAABAAEAAABgACEAAAABAAEAAABhABsAAAABAAEAAABiAA8AAAABAAEAAABiADAAAAABAAEAAABjAAUAAAABAAEAAAAAAAEAAAABAAEAAAAAAAMAAAABAAEAAAAAAAQAAAABAAEAAAAAABQAAAABAAEAAAAAACkAAAABAAEAAAABAAcAAAABAAEAAAABAAgAAAABAAEAAAABABAAAAABAAEAAAABABMAAAABAAEAAAABACIAAAABAAEAAAABACkAAAABAAEAAAABADAAAAABAAEAAAACAAEAAAABAAEAAAACAA4AAAABAAEAAAACABMAAAABAAEAAAACABUAAAABAAEAAAACAB0AAAABAAEAAAACACQAAAABAAEAAAACACUAAAABAAEAAAACACYAAAABAAEAAAACAC4AAAABAAEAAAACADEAAAABAAEAAAADAAAAAAABAAEAAAADAAIAAAABAAEAAAADAAQAAAABAAEAAAADAAUAAAABAAEAAAADAAkAAAABAAEAAAADAA8AAAABAAEAAAADAB0AAAABAAEAAAADACMAAAABAAEAAAADACcAAAABAAEAAAADAC0AAAABAAEAAAAEAA0AAAABAAEAAAAEACcAAAABAAEAAAAEADEAAAABAAEAAAAFAAoAAAABAAEAAAAFAAsAAAABAAEAAAAGAAIAAAABAAEAAAAGAAUAAAABAAEAAAAGAAcAAAABAAEAAAAGAAkAAAABAAEAAAAGAA0AAAABAAEAAAAGABIAAAABAAEAAAAGABMAAAABAAEAAAAGABUAAAABAAEAAAAGABoAAAABAAEAAAAGACEAAAABAAEAAAAGACQAAAABAAEAAAAHAAMAAAABAAEAAAAHAAQAAAABAAEAAAAHAAUAAAABAAEAAAAHAAoAAAABAAEAAAAHABYAAAABAAEAAAAHACMAAAABAAEAAAAHACQAAAABAAEAAAAHACsAAAABAAEAAAAIAAAAAAABAAEAAAAIABMAAAABAAEAAAAIABcAAAABAAEAAAAIACIAAAABAAEAAAAIACMAAAABAAEAAAAIACcAAAABAAEAAAAIAC4AAAABAAEAAAAIADEAAAABAAEAAAAJAAIAAAABAAEAAAAJAAcAAAABAAEAAAAJAAgAAAABAAEAAAAJABoAAAABAAEAAAAJACAAAAABAAEAAAAJACMAAAABAAEAAAAJACUAAAABAAEAAAAJACgAAAABAAEAAAAKAAYAAAABAAEAAAAKAA4AAAABAAEAAAAKAA8AAAABAAEAAAAKABEAAAABAAEAAAAKACIAAAABAAEAAAAKACsAAAABAAEAAAAKACwAAAABAAEAAAAKAC8AAAABAAEAAAALAAYAAAABAAEAAAALABcAAAABAAEAAAALACAAAAABAAEAAAALACEAAAABAAEAAAALACQAAAABAAEAAAALACUAAAABAAEAAAALACcAAAABAAEAAAAMAAgAAAABAAEAAAAMACAAAAABAAEAAAAMACMAAAABAAEAAAANAA8AAAABAAEAAAANACIAAAABAAEAAAANACoAAAABAAEAAAANACsAAAABAAEAAAANAC0AAAABAAEAAAANADAAAAABAAEAAAANADEAAAABAAEAAAAOAAwAAAABAAEAAAAOAA8AAAABAAEAAAAOABAAAAABAAEAAAAOABQAAAABAAEAAAAOABUAAAABAAEAAAAOABYAAAABAAEAAAAOABoAAAABAAEAAAAOACAAAAABAAEAAAAOACQAAAABAAEAAAAOACcAAAABAAEAAAAOAC4AAAABAAEAAAAPAAkAAAABAAEAAAAPAAsAAAABAAEAAAAQABIAAAABAAEAAAAQABsAAAABAAEAAAAQACAAAAABAAEAAAAQACYAAAABAAEAAAAQAC4AAAABAAEAAAARAAwAAAABAAEAAAARAA4AAAABAAEAAAARABYAAAABAAEAAAARAB4AAAABAAEAAAARACAAAAABAAEAAAARACEAAAABAAEAAAARAC0AAAABAAEAAAASAAoAAAABAAEAAAASAA8AAAABAAEAAAASABAAAAABAAEAAAASABsAAAABAAEAAAASAB0AAAABAAEAAAASACcAAAABAAEAAAASAC4AAAABAAEAAAATAAAAAAABAAEAAAATAAMAAAABAAEAAAATAAsAAAABAAEAAAATABoAAAABAAEAAAATACMAAAABAAEAAAATACUAAAABAAEAAAATACgAAAABAAEAAAAUAAIAAAABAAEAAAAUABIAAAABAAEAAAAUABQAAAABAAEAAAAUAB0AAAABAAEAAAAUACAAAAABAAEAAAAUACQAAAABAAEAAAAUADAAAAABAAEAAAAVAAMAAAABAAEAAAAVAAUAAAABAAEAAAAVAA0AAAABAAEAAAAVAA4AAAABAAEAAAAVABcAAAABAAEAAAAVACAAAAABAAEAAAAVACMAAAABAAEAAAAVADAAAAABAAEAAAAWAAEAAAABAAEAAAAWAA8AAAABAAEAAAAWABsAAAABAAEAAAAWACAAAAABAAEAAAAWACYAAAABAAEAAAAWACsAAAABAAEAAAAXAAwAAAABAAEAAAAXABcAAAABAAEAAAAXACcAAAABAAEAAAAYAAAAAAABAAEAAAAYAAEAAAABAAEAAAAYAAQAAAABAAEAAAAYAAgAAAABAAEAAAAYAAsAAAABAAEAAAAYABMAAAABAAEAAAAYABoAAAABAAEAAAAYAB0AAAABAAEAAAAYACAAAAABAAEAAAAYACIAAAABAAEAAAAYAC0AAAABAAEAAAAZAAIAAAABAAEAAAAZAAQAAAABAAEAAAAZAAsAAAABAAEAAAAZAA4AAAABAAEAAAAZABgAAAABAAEAAAAZABoAAAABAAEAAAAZABsAAAABAAEAAAAZAB8AAAABAAEAAAAZACIAAAABAAEAAAAZACMAAAABAAEAAAAZAC8AAAABAAEAAAAaAAYAAAABAAEAAAAaAAgAAAABAAEAAAAaABEAAAABAAEAAAAaABIAAAABAAEAAAAaABYAAAABAAEAAAAaABoAAAABAAEAAAAbAAMAAAABAAEAAAAbAAYAAAABAAEAAAAbABAAAAABAAEAAAAbABYAAAABAAEAAAAbACwAAAABAAEAAAAcAAcAAAABAAEAAAAcAA8AAAABAAEAAAAcABcAAAABAAEAAAAcABkAAAABAAEAAAAcAB4AAAABAAEAAAAcACAAAAABAAEAAAAcACIAAAABAAEAAAAcACkAAAABAAEAAAAdAAUAAAABAAEAAAAdAAYAAAABAAEAAAAdAAcAAAABAAEAAAAdAA4AAAABAAEAAAAdABYAAAABAAEAAAAdABcAAAABAAEAAAAdABkAAAABAAEAAAAdAB8AAAABAAEAAAAdACEAAAABAAEAAAAdACYAAAABAAEAAAAdACcAAAABAAEAAAAdACwAAAABAAEAAAAeAAMAAAABAAEAAAAeAAkAAAABAAEAAAAeAA8AAAABAAEAAAAeABAAAAABAAEAAAAeABIAAAABAAEAAAAeABMAAAABAAEAAAAeABcAAAABAAEAAAAeAB4AAAABAAEAAAAeACoAAAABAAEAAAAfAAkAAAABAAEAAAAfAAoAAAABAAEAAAAfABEAAAABAAEAAAAfABIAAAABAAEAAAAfABQAAAABAAEAAAAfABoAAAABAAEAAAAfABsAAAABAAEAAAAfAB8AAAABAAEAAAAfAC0AAAABAAEAAAAgACoAAAABAAEAAAAgACsAAAABAAEAAAAhAA0AAAABAAEAAAAhAA4AAAABAAEAAAAhABIAAAABAAEAAAAhABgAAAABAAEAAAAhAB0AAAABAAEAAAAhAC0AAAABAAEAAAAiAAwAAAABAAEAAAAiABYAAAABAAEAAAAiAB4AAAABAAEAAAAiACAAAAABAAEAAAAiACwAAAABAAEAAAAiAC8AAAABAAEAAAAjABIAAAABAAEAAAAjABQAAAABAAEAAAAjABkAAAABAAEAAAAjABsAAAABAAEAAAAjABwAAAABAAEAAAAjACAAAAABAAEAAAAjACEAAAABAAEAAAAjACIAAAABAAEAAAAjACYAAAABAAEAAAAjACkAAAABAAEAAAAjACsAAAABAAEAAAAjAC4AAAABAAEAAAAkAAAAAAABAAEAAAAkAAIAAAABAAEAAAAkAAYAAAABAAEAAAAkAAkAAAABAAEAAAAkAAwAAAABAAEAAAAkABUAAAABAAEAAAAkABcAAAABAAEAAAAkACIAAAABAAEAAAAkACQAAAABAAEAAAAkADAAAAABAAEAAAAlAAIAAAABAAEAAAAlAAUAAAABAAEAAAAlAAgAAAABAAEAAAAlAAsAAAABAAEAAAAlAB8AAAABAAEAAAAlACcAAAABAAEAAAAmAAEAAAABAAEAAAAmAAkAAAABAAEAAAAmAAsAAAABAAEAAAAmABAAAAABAAEAAAAmABcAAAABAAEAAAAmACMAAAABAAEAAAAmACYAAAABAAEAAAAmACcAAAABAAEAAAAnAAkAAAABAAEAAAAnABYAAAABAAEAAAAnAC0AAAABAAEAAAAoAAYAAAABAAEAAAAoAAkAAAABAAEAAAAoAA8AAAABAAEAAAAoABcAAAABAAEAAAAoACAAAAABAAEAAAAoACcAAAABAAEAAAAoADAAAAABAAEAAAApAAoAAAABAAEAAAApABIAAAABAAEAAAApABQAAAABAAEAAAApACAAAAABAAEAAAApACkAAAABAAEAAAApACwAAAABAAEAAAAqAAAAAAABAAEAAAAqAAQAAAABAAEAAAAqAAkAAAABAAEAAAAqABIAAAABAAEAAAAqABkAAAABAAEAAAAqAB8AAAABAAEAAAAqACEAAAABAAEAAAAqACUAAAABAAEAAAAqACgAAAABAAEAAAAqACkAAAABAAEAAAAqACsAAAABAAEAAAAqAC4AAAABAAEAAAAqADAAAAABAAEAAAArAAMAAAABAAEAAAArAAUAAAABAAEAAAArAAkAAAABAAEAAAArAAsAAAABAAEAAAArAAwAAAABAAEAAAArABIAAAABAAEAAAArACQAAAABAAEAAAArACgAAAABAAEAAAArACsAAAABAAEAAAAsAAMAAAABAAEAAAAsAAkAAAABAAEAAAAsAAsAAAABAAEAAAAsAA4AAAABAAEAAAAsABYAAAABAAEAAAAsABgAAAABAAEAAAAsABwAAAABAAEAAAAsACcAAAABAAEAAAAsACwAAAABAAEAAAAsADEAAAABAAEAAAAtABAAAAABAAEAAAAtABEAAAABAAEAAAAtABQAAAABAAEAAAAtABkAAAABAAEAAAAtAB0AAAABAAEAAAAtAB8AAAABAAEAAAAuAAkAAAABAAEAAAAuAAoAAAABAAEAAAAuACEAAAABAAEAAAAuACIAAAABAAEAAAAuACMAAAABAAEAAAAuACUAAAABAAEAAAAuACoAAAABAAEAAAAuADAAAAABAAEAAAAvABAAAAABAAEAAAAvABQAAAABAAEAAAAvACMAAAABAAEAAAAwAAAAAAABAAEAAAAwAAMAAAABAAEAAAAwABwAAAABAAEAAAAwAC0AAAABAAEAAAAwAC8AAAABAAEAAAAxAAcAAAABAAEAAAAxAA8AAAABAAEAAAAxABAAAAABAAEAAAAxABUAAAABAAEAAAAxACYAAAABAAEAAAAxAC8AAAABAAEAAAAyABIAAAABAAEAAAAyABcAAAABAAEAAAAyACQAAAABAAEAAAAyACwAAAABAAEAAAAyAC4AAAABAAEAAAAyADEAAAABAAEAAAAzAAoAAAABAAEAAAAzAAwAAAABAAEAAAAzABAAAAABAAEAAAAzABYAAAABAAEAAAAzAB8AAAABAAEAAAAzACsAAAABAAEAAAA0AAUAAAABAAEAAAA0AC8AAAABAAEAAAA1AAAAAAABAAEAAAA1AAQAAAABAAEAAAA1AA0AAAABAAEAAAA1ADEAAAABAAEAAAA2AAcAAAABAAEAAAA2AA4AAAABAAEAAAA2ABIAAAABAAEAAAA2ABYAAAABAAEAAAA2ABkAAAABAAEAAAA2ABoAAAABAAEAAAA2AB0AAAABAAEAAAA2ACQAAAABAAEAAAA3AAYAAAABAAEAAAA3ABQAAAABAAEAAAA3ABsAAAABAAEAAAA3AB0AAAABAAEAAAA3AB4AAAABAAEAAAA3AB8AAAABAAEAAAA3ACAAAAABAAEAAAA4AAEAAAABAAEAAAA4AAwAAAABAAEAAAA4AA8AAAABAAEAAAA4ACQAAAABAAEAAAA4ACcAAAABAAEAAAA4ACkAAAABAAEAAAA4ACwAAAABAAEAAAA4AC4AAAABAAEAAAA5ABwAAAABAAEAAAA5AB0AAAABAAEAAAA5ACUAAAABAAEAAAA5ACwAAAABAAEAAAA5AC8AAAABAAEAAAA6ABQAAAABAAEAAAA6ABYAAAABAAEAAAA6ABoAAAABAAEAAAA6AB0AAAABAAEAAAA6AB4AAAABAAEAAAA6ACAAAAABAAEAAAA6ACYAAAABAAEAAAA6AC8AAAABAAEAAAA6ADEAAAABAAEAAAA7AAUAAAABAAEAAAA7AAkAAAABAAEAAAA7ABMAAAABAAEAAAA7ABkAAAABAAEAAAA7AC4AAAABAAEAAAA7AC8AAAABAAEAAAA8AAsAAAABAAEAAAA8ABAAAAABAAEAAAA8ABIAAAABAAEAAAA8ABwAAAABAAEAAAA8AB0AAAABAAEAAAA8ACkAAAABAAEAAAA8AC4AAAABAAEAAAA8ADEAAAABAAEAAAA9AAwAAAABAAEAAAA9ABAAAAABAAEAAAA9ABEAAAABAAEAAAA9ACMAAAABAAEAAAA9ACcAAAABAAEAAAA9ACwAAAABAAEAAAA9AC0AAAABAAEAAAA9ADAAAAABAAEAAAA+AAgAAAABAAEAAAA+AAsAAAABAAEAAAA+AA0AAAABAAEAAAA+ABAAAAABAAEAAAA+ABMAAAABAAEAAAA+AB4AAAABAAEAAAA+ACIAAAABAAEAAAA+ACMAAAABAAEAAAA+ACcAAAABAAEAAAA+ACkAAAABAAEAAAA+ADEAAAABAAEAAAA/AAAAAAABAAEAAAA/AAYAAAABAAEAAAA/ABYAAAABAAEAAAA/ABoAAAABAAEAAAA/ADEAAAABAAEAAABAAAIAAAABAAEAAABAABoAAAABAAEAAABAABsAAAABAAEAAABAACgAAAABAAEAAABBAAUAAAABAAEAAABBAA0AAAABAAEAAABBAA4AAAABAAEAAABBABEAAAABAAEAAABBACUAAAABAAEAAABBACcAAAABAAEAAABBADEAAAABAAEAAABCAAIAAAABAAEAAABCAAUAAAABAAEAAABCAA0AAAABAAEAAABCAA4AAAABAAEAAABCABUAAAABAAEAAABCABYAAAABAAEAAABCAC4AAAABAAEAAABDAAcAAAABAAEAAABDABcAAAABAAEAAABDACEAAAABAAEAAABDACcAAAABAAEAAABDACkAAAABAAEAAABDACsAAAABAAEAAABDACwAAAABAAEAAABDAC4AAAABAAEAAABEAAAAAAABAAEAAABEAAgAAAABAAEAAABEAA0AAAABAAEAAABEABcAAAABAAEAAABEAB4AAAABAAEAAABEACYAAAABAAEAAABEACsAAAABAAEAAABFAAgAAAABAAEAAABFAAoAAAABAAEAAABFAA8AAAABAAEAAABFABwAAAABAAEAAABFAB0AAAABAAEAAABFAB4AAAABAAEAAABFACcAAAABAAEAAABGAAgAAAABAAEAAABGAAkAAAABAAEAAABGAAoAAAABAAEAAABGAA8AAAABAAEAAABGABcAAAABAAEAAABGAB4AAAABAAEAAABGACwAAAABAAEAAABHAAIAAAABAAEAAABHABAAAAABAAEAAABHABEAAAABAAEAAABIAAAAAAABAAEAAABIAAIAAAABAAEAAABIAAwAAAABAAEAAABIAA4AAAABAAEAAABIABYAAAABAAEAAABIABsAAAABAAEAAABIACEAAAABAAEAAABIACwAAAABAAEAAABIADAAAAABAAEAAABJAAgAAAABAAEAAABJABkAAAABAAEAAABJABoAAAABAAEAAABJAB0AAAABAAEAAABJAB8AAAABAAEAAABJACoAAAABAAEAAABKAAIAAAABAAEAAABKAAQAAAABAAEAAABKAA4AAAABAAEAAABKABEAAAABAAEAAABKACMAAAABAAEAAABKACoAAAABAAEAAABKADAAAAABAAEAAABLAAMAAAABAAEAAABLAAsAAAABAAEAAABLABsAAAABAAEAAABLACYAAAABAAEAAABMAAAAAAABAAEAAABMAAsAAAABAAEAAABMABUAAAABAAEAAABMACAAAAABAAEAAABNAAUAAAABAAEAAABNAAcAAAABAAEAAABNAAwAAAABAAEAAABNAA8AAAABAAEAAABNABYAAAABAAEAAABNAB0AAAABAAEAAABNAB4AAAABAAEAAABNACwAAAABAAEAAABOAAMAAAABAAEAAABOABAAAAABAAEAAABOABYAAAABAAEAAABOABkAAAABAAEAAABOABwAAAABAAEAAABOACUAAAABAAEAAABPAAQAAAABAAEAAABPAAUAAAABAAEAAABPABYAAAABAAEAAABPABgAAAABAAEAAABPACEAAAABAAEAAABPADEAAAABAAEAAABQAAEAAAABAAEAAABQAAgAAAABAAEAAABQAAkAAAABAAEAAABQABMAAAABAAEAAABQABgAAAABAAEAAABQABoAAAABAAEAAABQABwAAAABAAEAAABQACMAAAABAAEAAABQADEAAAABAAEAAABRABAAAAABAAEAAABRACQAAAABAAEAAABSAAsAAAABAAEAAABSAAwAAAABAAEAAABSABQAAAABAAEAAABSAC0AAAABAAEAAABTAAEAAAABAAEAAABTABEAAAABAAEAAABTABIAAAABAAEAAABTAB4AAAABAAEAAABTACEAAAABAAEAAABTACUAAAABAAEAAABTAC8AAAABAAEAAABUAAMAAAABAAEAAABUAAUAAAABAAEAAABUABEAAAABAAEAAABUABcAAAABAAEAAABUABgAAAABAAEAAABUABoAAAABAAEAAABUABwAAAABAAEAAABUACEAAAABAAEAAABUACgAAAABAAEAAABUADEAAAABAAEAAABVAAAAAAABAAEAAABVAB4AAAABAAEAAABVACEAAAABAAEAAABVACwAAAABAAEAAABVAC0AAAABAAEAAABVAC4AAAABAAEAAABWAAEAAAABAAEAAABWAAMAAAABAAEAAABWABMAAAABAAEAAABWACAAAAABAAEAAABWACMAAAABAAEAAABWACcAAAABAAEAAABXAA4AAAABAAEAAABXABAAAAABAAEAAABXAB4AAAABAAEAAABXACgAAAABAAEAAABXACkAAAABAAEAAABXAC0AAAABAAEAAABYAA4AAAABAAEAAABYABoAAAABAAEAAABYABsAAAABAAEAAABYAB8AAAABAAEAAABZAAUAAAABAAEAAABZAAYAAAABAAEAAABZAAkAAAABAAEAAABZAA0AAAABAAEAAABZABAAAAABAAEAAABZABgAAAABAAEAAABZABoAAAABAAEAAABZACAAAAABAAEAAABZACUAAAABAAEAAABZACYAAAABAAEAAABZACkAAAABAAEAAABaAAEAAAABAAEAAABaAAsAAAABAAEAAABaACgAAAABAAEAAABaADEAAAABAAEAAABbAAoAAAABAAEAAABbAA4AAAABAAEAAABbABEAAAABAAEAAABbABgAAAABAAEAAABbAC0AAAABAAEAAABcABQAAAABAAEAAABcAB4AAAABAAEAAABcAB8AAAABAAEAAABcACQAAAABAAEAAABcACoAAAABAAEAAABcAC8AAAABAAEAAABdAAIAAAABAAEAAABdAAMAAAABAAEAAABdAAUAAAABAAEAAABdAA4AAAABAAEAAABdABEAAAABAAEAAABdADAAAAABAAEAAABeAAAAAAABAAEAAABeAAUAAAABAAEAAABeABUAAAABAAEAAABeABkAAAABAAEAAABeACgAAAABAAEAAABeAC0AAAABAAEAAABeADEAAAABAAEAAABfAAQAAAABAAEAAABfAAcAAAABAAEAAABfAAoAAAABAAEAAABfAB4AAAABAAEAAABfACAAAAABAAEAAABfAC4AAAABAAEAAABgAAkAAAABAAEAAABgABoAAAABAAEAAABgAB8AAAABAAEAAABgACAAAAABAAEAAABgACkAAAABAAEAAABgAC0AAAABAAEAAABhAAQAAAABAAEAAABhAAoAAAABAAEAAABhABQAAAABAAEAAABhACwAAAABAAEAAABhADEAAAABAAEAAABiAAQAAAABAAEAAABiAAoAAAABAAEAAABiABIAAAABAAEAAABiACYAAAABAAEAAABiAC4AAAABAAEAAABjAAAAAAABAAEAAABjAAIAAAABAAEAAABjAAkAAAABAAEAAABjABIAAAABAAEAAABjABUAAAABAAEAAABjABYAAAABAAEAAABjAB8AAAABAAEAAABjACQAAAABAAEAAABjACkAAAABAAEAAABjADEAAAABAAEAAAA=")
tile_set = SubResource("TileSet_bdnrh")

[node name="BackgroundButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
button_mask = 3

[node name="WorldTime" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="button_down" from="BackgroundButton" to="." method="_on_background_button_button_down"]
[connection signal="button_up" from="BackgroundButton" to="." method="_on_background_button_button_up"]
[connection signal="timeout" from="WorldTime" to="." method="_on_world_time_timeout"]
